--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "react-pizza",
+  "name": "react-store",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
+    "react-content-loader": "^7.0.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.75.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
